# parallel-algo

./: .gitignore  CMakeLists.txt  build.sh  clean.sh  conanfile.txt
c_cuda/: CMakeLists.txt
c_cuda/common/: error_assert.h
c_cuda/convolution/: CMakeLists.txt  conv_2d_basic.cu  conv_2d_basic.h  conv_2d_constant_filter.cu  conv_2d_constant_filter.h  hello_cuda.cu
examples/: CMakeLists.txt  convolution_0.c  convolution_1.c  convolution_2.c  gpu_info.cu
rust/: Cargo.toml
rust/src/: bindings.h  lib.rs
src/: CMakeLists.txt  gpu_info.cu
src/convolution/: CMakeLists.txt  main.cpp
